<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fire_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/field_device_number"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/fire_device"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:entries="@array/fire_devices"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fire_textview_trigger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/field_trigger_type"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/fire_trigger"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:entries="@array/fire_trigger_devices"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fire_textview_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/field_event_type"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/fire_event"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/event_fire_alarm"
            android:layout_height="wrap_content"
            android:background="#00000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/fire_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="100dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="onClick"
            android:text="@string/send_post_request"
            android:textColor="#ffffff"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
