<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/vehicle_textview_device_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/field_device_number"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/vehicle_device_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:entries="@array/snap_devices"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/vehicle_textview_file_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/field_file_url"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/vehicle_file_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:ems="19"
            android:hint="请输入文件URL"
            android:padding="1dp"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/vehicle_textview_plate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/field_plate"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/vehicle_plate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/plates" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/vehicle_textview_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/field_event_type"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/vehicle_event"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="#00000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/handle_lyt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/vehicle_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="100dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="onClick"
            android:text="@string/send_post_request"
            android:textColor="#ffffff"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>